# mmpsu_v2_ros

./: README.md  pyproject.toml
mmpsu_v2/: README.md  package.xml  setup.py
mmpsu_v2/config/: mmpsu_v2_config.yaml
mmpsu_v2/launch/: mmpsu_v2_launch.py  mmpsu_v2_launch.yaml
mmpsu_v2/mmpsu_v2/: mmpsu_base.py  mmpsu_debug_pane.py  mmpsu_v2_node.py  mmpsu_v2_uart.py
mmpsu_v2_interfaces/: CMakeLists.txt  package.xml
mmpsu_v2_interfaces/msg/: MmpsuAuxTelem.msg  MmpsuCoreTelem.msg
